# CPTS322-Point-of-Sale-System

./: .actrc  .gitignore  ISSUES.md  README.md  package-lock.json
.github/workflows/: backend.yml  deploy.yml  frontend.yml  latex.yml
Sprint Reports/Sprint2/: Sprint Demos.md  sprint_report_template.md
Sprint Reports/Sprint3/: Sprint Demo Video  sprint3Report.md
backend/: .gitignore  Cargo.toml  Rocket.toml  package-lock.json  package.json
backend/src/: api.rs  auth.rs  main.rs  models.rs  repository.rs
backend/src/api/: product_api.rs  transaction_api.rs
backend/src/api/admin/: mod.rs  product_admin_api.rs  settings_admin_api.rs  user_admin_api.rs
backend/src/models/: product.rs  settings.rs  staff_user.rs  transaction.rs
backend/src/repository/: mongodb_repo.rs
docs/: Sprint Demos  sprint-x-report.md
frontend/: README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs
frontend/src/: app.html
frontend/src/lib/api/: admin.ts  pos.ts
frontend/src/lib/components/: BackButton.svelte  CheckoutButton.svelte  LoginButton.svelte  LogoutButton.svelte  Profile.svelte
frontend/src/lib/stores/: auth.ts  cart.ts
frontend/src/routes/: +layout.svelte  +page.svelte  page.svelte.spec.ts
frontend/src/routes/admin/: +page.svelte
frontend/src/routes/cashier/: +page.svelte  +page_LOCAL_49469.svelte
frontend/src/routes/home/: +page.svelte
report/: README.md  Tectonic.toml
report/src/: _preamble.aux  _preamble.out  _preamble.tex  _preamble.toc  index.tex  test.uml
(+2 files in other folders)
