[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
dotenv = "0.15.0"
mongodb = "3.5.1"
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.228"
tokio = "1.49.0"
upc-a = {version = "0.1.0", features = ["serde"]}
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0.145"
once_cell = "1.21.3"
